deploy1/04-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: nightmare-project
spec:
  selector:
    app: sqlite-backend
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
