deploy1/09-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: nightmare-project
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
