deploy1/10-moniroting.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-monitor
  namespace: nightmare-project
  labels:
    app: backend
    monitor: "true"
spec:
  selector:
    app: sqlite-backend
  ports:
  - port: 5000
    targetPort: 5000
    name: http-metrics
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-monitor
  namespace: nightmare-project
  labels:
    app: frontend
    monitor: "true"
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP
