deploy1/08-traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mebn-task-manager
  namespace: nightmare-project
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: nightmare-project-stripprefix@kubernetescrd
spec:
  rules:
  - host: mebn-task-manager.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
